<resources>
    <string name="app_name">BrainRecycle</string>
    <string name="brain">BRAIN</string>
    <string name="recycle">RECYCLE</string>
    <string name="jogar">JOGAR</string>
    <string name="configuracoes">COFIGURAÇÕES</string>
    <string name="creditos"><u>créditos</u></string>
    <string name="sobre"><u>SOBRE</u></string>
    <string name="menu"><b>menu<font color="#ff60ff">:</font></b></string>
    <string name="dark">Tema escuro</string>
    <string name="enviar">Enviar</string>
    <string name="txtsobre">Este aplicativo foi criado por <font color="#ff60ff">João Henrique Leite</font>, com a intenção de poder testar mais o <font color="#aa3631">raciocínio lógico</font> das pessoas e atribuir mais
        conhecimento sobre a <font color="#03714d">sustentabilidade</font>, o que com certeza é algo que <font color="#2989c6">deveria</font> ser tratado e conhecido por todos.</string>
    <string name="vejamais"><b>Veja mais Projetos</b></string>
    <string name="joaoleite">@joaoleite2</string>
    <string name="comando">use o comando <font color="#ff60ff">/text:</font> para responder as perguntas</string>
    <string name="digite">digite aqui sua resposta</string>
    <string name="pronto">Você está pronto<font color="#ecbd18">?</font></string>
    <string name="cordarec">Qual a cor do vidro?</string>
    <string name="pergunta2">Qual o país que mais recicla no mundo?</string>
    <string name="dica">dica</string>
    <string name="latas">Em relação as latas de reciclagem...</string>
    <string name="bemvindo">Seja bem vindo</string>
    <string name="apresentese">Se apresente</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="pergunta3">Acenda a lâmpada utilizando a energia limpa de movimento cinético</string>
</resources>