<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edtresposta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rec"
    tools:context=".tutorial">

    <Button
        android:id="@+id/btnmenu4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="tutorialMenu"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/txtcomando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comando"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <EditText
        android:id="@+id/editResponder2"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/digite"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgseta2"
        android:layout_width="66dp"
        android:layout_height="56dp"
        android:layout_marginEnd="40dp"
        android:onClick="jogar"
        app:layout_constraintBottom_toBottomOf="@+id/editResponder2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/txtpergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pronto"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/editResponder2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33dp"
        android:layout_height="48dp"
        android:onClick="tutorialMenu"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    <View
        android:id="@+id/view4"
        android:layout_width="359dp"
        android:layout_height="31dp"
        android:background="#0CFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />


</androidx.constraintlayout.widget.ConstraintLayout>