<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".level1"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imgseta1"
        android:layout_width="66dp"
        android:layout_height="56dp"
        android:layout_marginEnd="40dp"
        android:onClick="jogar"
        app:layout_constraintBottom_toBottomOf="@+id/editResponder1"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
        app:tint="#FFFFFF" />

    <EditText
        android:id="@+id/editResponder1"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/digite"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <Button
        android:id="@+id/btnmenu4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="Menuz"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="308dp"
        android:onClick="Menuz"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    <ImageView
        android:id="@+id/imgDica"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:hapticFeedbackEnabled="false"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/baseline_wb_incandescent_24"
        app:tint="@android:color/white"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtDica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dica"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>